# grpc-test

GrpcGreeterClient/: GrpcGreeterClient.csproj  Program.cs
tests_rule_proto_grpc/: BUILD.bazel  WORKSPACE  bazel-bin  bazel-out  bazel-testlogs  bazel-tests_rule_proto_grpc  client.cs  python_test.py  server.py
